--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.3",
-    "toastify": "^2.0.1"
+    "toastify": "^2.0.1",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
