--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.0",
