--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.3",
     "appwrite": "^17.0.0",
+    "formik": "^2.4.6",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.6",
     "react": "^18.3.1",
@@ -26,7 +27,8 @@
     "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.3",
     "toastify": "^2.0.1",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
