--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.3",
     "appwrite": "^17.0.0",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "framer-motion": "^12.1.0",
     "lucide-react": "^0.474.0",
-    "motion": "^12.0.6",
+    "motion": "^12.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -25,6 +27,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.3",
     "toastify": "^2.0.1",
     "validator": "^13.12.0",
