--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "@tailwindcss/postcss": "^4.0.3",
     "@tailwindcss/vite": "^4.0.3",
     "appwrite": "^17.0.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.1.0",
     "lucide-react": "^0.474.0",
-    "motion": "^12.1.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.3.1",
+    "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
