--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/postcss": "^4.0.3",
     "@tailwindcss/vite": "^4.0.3",
+    "@tinymce/tinymce-react": "^5.1.1",
     "appwrite": "^17.0.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
