--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.3",
     "toastify": "^2.0.1",
