--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.1.0",
+    "html-react-parser": "^5.2.2",
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.3.1",
